# obs-tutorial-rs

./: Cargo.toml  README.md
benches/: get.rs  put.rs
examples/: delete.rs  get.rs  put.rs
report/: report.md
src/: config.rs  delete.rs  get.rs  lib.rs  put.rs  single.rs
