[package]
name = "s3-bench-rs"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-s3 = { path = "../rusty-s3" }
tokio = { version = "1.0.1", features = ["macros", "fs", "rt-multi-thread"] }
reqwest = "0.11"
async-trait = "0.1.50"
lazy_static = "1.4"
criterion = {version = "0.3.4", features = ["async_futures", "html_reports"]}

[[bench]]
name = "get"
harness = false

[[bench]]
name = "put"
harness = false